--- a/exercicioJS/Tabalho I/pergunteMe/src/index.html
+++ b/exercicioJS/Tabalho I/pergunteMe/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>pergunte-Me</title>
+  <title>qual-eH</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
